[project]
name = "biomarkers-ui"
version = "0.1.0"
description = "Reflex UI for methylation clock computation"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "just-biomarkers>=0.1.0",
    "plotly>=6.6.0",
    "reflex>=0.8.27",
]

[project.scripts]
biomarkers-ui = "biomarkers_ui.biomarkers_ui:main"
ui = "biomarkers_ui.cli:launch_ui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "uploaded_files/",
    ".web/",
    "__pycache__/",
    "*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["biomarkers_ui"]

[tool.uv.sources]
just-biomarkers = { workspace = true }
